# everywox

./: .gitignore  .mise.toml  README.md  compat.py  const.py  main.py  plugin.json  pyproject.toml  search.py
.zed/: settings.json
